# pl_detector

./: CMakeLists.txt  Makefile  PlagarismDetector  README.md  cmos.cpp  cmos.l  lex.yy.c  run_cmos.sh  scanner
Examples/Examples/: bills_01.c  bills_02.c  bills_03.c  bills_04.c  bills_05.c  bills_06.c  bills_07.c  bills_08.c  bills_09.c  bills_10.c  bills_11.c  bills_12.c  bills_13.c  bills_14.c  bills_15.c  bills_16.c  bills_17.c  bills_18.c  bills_19.c  bills_20.c  bills_21.c  bills_22.c  bills_23.c  bills_24.c  bills_25.c  bills_26.c  bills_27.c  bills_28.c  bills_29.c  bills_30.c  bills_31.c  bills_32.c  bills_33.c  bills_34.c  bills_35.c  bills_36.c  bills_37.c  bills_38.c  bills_39.c  bills_40.c  (+14 more)
